feat/create, update Lesson with link video, pdf

--- a/Online_Course/appsettings.json
+++ b/Online_Course/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=LAPTOP-HOANG\\MSSQLSERVER01;Database=OnlineCourseDb_v2;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
+  "YouTube": {
+    "ApiKey": "AIzaSyBswpRpZUeK_OSiSUr92TwOxnJJuvRtoBs"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
