feat: Refactor course and category handling across the application
- Updated course model and view models to replace string category references with integer CategoryId and string CategoryName for better data integrity.
- Modified various controllers and services to accommodate the new category structure.
- Enhanced views to display category names instead of IDs, improving user experience.
- Added YouTube API key to appsettings for video integration.
- Updated logging messages to Vietnamese for better localization.

--- a/Online_Course/appsettings.json
+++ b/Online_Course/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OnlineCourseDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
+  "YouTube": {
+  "ApiKey": "AIzaSyBswpRpZUeK_OSiSUr92TwOxnJJuvRtoBs"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
