feat/update ProgressPage of Student

--- a/Online_Course/appsettings.json
+++ b/Online_Course/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OnlineCourseDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=LAPTOP-HOANG\\MSSQLSERVER01;Database=OnlineCourseDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "YouTube": {
     "ApiKey": "AIzaSyBswpRpZUeK_OSiSUr92TwOxnJJuvRtoBs"
