--- a/Online_Course/appsettings.json
+++ b/Online_Course/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=LAPTOP-HOANG\\MSSQLSERVER01;Database=OnlineCourseDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "YouTube": {
-    "ApiKey": "AIzaSyBswpRpZUeK_OSiSUr92TwOxnJJuvRtoBs"
+    "ApiKey": 
   },
   "Logging": {
     "LogLevel": {
